--- a/doors/1.html
+++ b/doors/1.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Door 8 - von Steinkirch's Samhain Countdown</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Door 1 - von Steinkirch's Samhain Countdown</title>
+    <link rel="stylesheet" href="../css/style.css">
     <style>
         .door-page {
             min-height: 100vh;
@@ -73,15 +73,24 @@
 <body>
     <div class="door-page">
         <div class="door-content">
-            <h1 class="door-title">🚪 Door 8 🚪</h1>
+            <h1 class="door-title">🚪 Door 1 🚪</h1>
             
             <div class="door-text">
                 <div class="placeholder-text">
-                    <p>Soon</p>
+                    <p>This is where you can add your custom content for Door 1.</p>
+                    <p>Replace this placeholder text with whatever you'd like to display when someone opens this door.</p>
+                    <p>You can add:</p>
+                    <ul style="text-align: left; margin: 20px 0;">
+                        <li>Stories or poems</li>
+                        <li>Halloween wisdom or quotes</li>
+                        <li>Images or videos</li>
+                        <li>Interactive content</li>
+                        <li>Links to other pages</li>
+                    </ul>
                 </div>
             </div>
             
-            <a href="index.html" class="back-button">← Back to Calendar</a>
+            <a href="../index.html" class="back-button">← Back to Calendar</a>
         </div>
     </div>
 </body>
