--- a/doors/12.html
+++ b/doors/12.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Door 6 - von Steinkirch's Samhain Countdown</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Door 12 - von Steinkirch's Samhain Countdown</title>
+    <link rel="stylesheet" href="../css/style.css">
     <style>
         .door-page {
             min-height: 100vh;
@@ -73,7 +73,7 @@
 <body>
     <div class="door-page">
         <div class="door-content">
-            <h1 class="door-title">🚪 Door 6 🚪</h1>
+            <h1 class="door-title">🚪 Door 12 🚪</h1>
             
             <div class="door-text">
                 <div class="placeholder-text">
@@ -81,7 +81,7 @@
                 </div>
             </div>
             
-            <a href="index.html" class="back-button">← Back to Calendar</a>
+            <a href="../index.html" class="back-button">← Back to Calendar</a>
         </div>
     </div>
 </body>
