--- a/doors/5.html
+++ b/doors/5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Door 5 - von Steinkirch's Samhain Countdown</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <style>
         .door-page {
             min-height: 100vh;
@@ -81,7 +81,7 @@
                 </div>
             </div>
             
-            <a href="index.html" class="back-button">← Back to Calendar</a>
+            <a href="../index.html" class="back-button">← Back to Calendar</a>
         </div>
     </div>
 </body>
