--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>von Steinkirch's Samhain Countdown: 13 Doors of Wisdom</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
@@ -109,6 +109,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
