--- a/doors/1.html
+++ b/doors/1.html
@@ -89,7 +89,7 @@
                     but as <a href="https://www.vaticannews.va/en/pope/news/2025-10/pope-leo-xiv-canonization-mass-to-rot-maloyan-longo.html" target="_blank">our awesome brother leo said</a>:
 
                     <br> <br>
-                    <em>"one temptation is to let the scandal of evil overcome us and<br> lead us to think that G✪d does not care for our plight."</em>
+                    <em>"one temptation is to let the scandal of evil overcome us and<br> lead us to think that G✪d does not care for our plight"</em>
 
                     <br> <br>
 
@@ -101,7 +101,7 @@
                     <br> <br>
 
                     let's play a game. it's called: <br>
-                    <em>13 days to open the veil for a blessed beautiful world</em>.
+                    <em>"13 days to open the veil for a blessed beautiful world"</em>
 
                     <br> <br>
 
