--- a/doors/1.html
+++ b/doors/1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Door I</title>
+    <title>door 1 of the spell</title>
     <link rel="stylesheet" href="../css/style.css">
     <style>
         .door-page {
