Update text to add ellipsis for emphasis

--- a/doors/1.html
+++ b/doors/1.html
@@ -80,7 +80,7 @@
             
             <div class="door-text">
                 <div class="placeholder-text">
-                    all right, my beautiful family  <br>
+                    all right, my beautiful family... <br>
                     i love you all so much.
 
                     <br>
