Fix HTML formatting in doors/1.html
Removed unnecessary comma from the HTML content.

--- a/doors/1.html
+++ b/doors/1.html
@@ -48,7 +48,7 @@
                     a world where, every day when we wake up, we feel so so so so good <br>
                     and we feel so so so so much love <br>
                     a world where <a href="https://www.youtube.com/watch?v=GENGuelRHig" target="_blank">magick is real</a><br>
-                    a world where <a href="https://www.youtube.com/shorts/AmQvCEZJFOs" target="_blank">evil narcissists</a> are a forgotten memory,<br>
+                    a world where <a href="https://www.youtube.com/shorts/AmQvCEZJFOs" target="_blank">evil narcissists</a> are a forgotten memory<br>
                     and kindness is king <br>
                     and <a href="https://www.youtube.com/watch?v=sVndc7yxp9c" target="_blank">common sense is back</a> <br>
                     a world where <a href="https://www.youtube.com/watch?v=vrWk452i1s8" target="_blank">art</a> meets light and dark<br>
