--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
         </div>
     </div>
 
+    <footer>
+        <p>an experiment by <a href="https://marina.vonsteinkirch.com" target="_blank">marina von steinkirch</a></p>
+    </footer>
+
     <script src="script/script.js"></script>
 </body>
 </html>
