Update title and header for Samhain'25 Countdown

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>von Steinkirch's Samhain'25 Countdown</title>
+    <title>Dr. von Steinkirch's Samhain'25 Countdown</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>🎃 von Steinkirch's Samhain'25 Countdown 🎃</h1>
+            <h1>🎃 Dr. von Steinkirch's Samhain'25 Countdown 🎃</h1>
             <h2>on the most eerie day of the year, let's lift the veils of communion and love
                 <br>open a door everyday until samhain to get ready for the experiment
                 <br>days left: <span id="doors-left"></span></h2>
