--- a/doors/1.html
+++ b/doors/1.html
@@ -39,7 +39,7 @@
                     <br> <br>
 
                     here is how it works: <br>
-                    each day for the next 13 days - leading up to <a href="https://www.perplexity.ai/search/tell-me-about-samhain-XgPL7UqdTD6aoKQzhxxTJw#0" target="_blank">samhain</a> <br>
+                    each day for the next 13 days — leading up to <a href="https://www.perplexity.ai/search/tell-me-about-samhain-XgPL7UqdTD6aoKQzhxxTJw#0" target="_blank">samhain</a> <br>
                     we'll craft a spell for the world we want
 
                     <br> <br>
