--- a/doors/1.html
+++ b/doors/1.html
@@ -63,7 +63,7 @@
                     write down 13 things you are grateful for in your life<br>
                     do it with me <br>
                     read your list out loud<br>
-                    feel the bless of these 13 things being in your life<br>
+                    feel the blessing of these 13 things being in your life<br>
                     and finally — carefully — burn the paper in the candle's flame<br>
                     let the candle burn<br>
                     let it go
