--- a/doors/2.html
+++ b/doors/2.html
@@ -34,13 +34,21 @@
                     while diving deeper into the shadows<br>
                     to find the light within
 
-                    <br> <br>
+                    <br>
+
+                    </div>
+                    <div class="moon-image">
+                        <img src="../public/new_moon.jpg" alt="New Moon" class="new-moon-img">
+                    </div>
+                </div>
+                
+                <div class="placeholder-text" style="width: 100%; margin-top: 20px;">
 
                     <span style="color: #8B008B; font-weight: bold;">
-                        <em>"the cave you fear to enter holds the treasure you seek"</em><br>
-                    — joseph campbell</span>    
+                        <em>"the cave you fear to enter holds the treasure you seek"</em>
+                    — joseph campbell</span>   
 
-                    <br> <br>
+                    <br><br>
 
                     today's task is about <strong>shadow work</strong><br>
                     the ancient practice of embracing all parts of ourselves<br>
@@ -103,10 +111,6 @@
                     (hint: it involves vampires)<br>
                     the veil grows thinner...
                     <br>
-                    </div>
-                    <div class="moon-image">
-                        <img src="../public/new_moon.jpg" alt="New Moon" class="new-moon-img">
-                    </div>
                 </div>
             </div>
             
