--- a/doors/2.html
+++ b/doors/2.html
@@ -101,7 +101,7 @@
                     i think so<br><br>
 
                     <a href="https://www.youtube.com/watch?v=AZCEEQht5-s&list=LL" target="_blank">you are whole, you are complete</a><br>
-                    <a href="https://www.youtube.com/watch?v=ADzehrUgzGg&list=LL&index=3" target="_blank">even in your brokenness, you are absolutely perfect</a><br>
+                    <a href="https://www.youtube.com/watch?v=ADzehrUgzGg&list=LL&index=3" target="_blank">even in your shatteredness, you are absolutely perfect</a><br>
 
                     <br>
 
