--- a/doors/1.html
+++ b/doors/1.html
@@ -81,6 +81,6 @@
         </div>
     </div>
 
-    <script src="../script/door-effects.js"></script>
+    <script src="../script/floating_stars.js"></script>
 </body>
 </html>
