--- a/doors/13.html
+++ b/doors/13.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Door 13 - von Steinkirch's Samhain Countdown</title>
+    <title>door 13 of the spell</title>
     <link rel="icon" type="image/svg+xml" href="../public/favicon.svg">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -22,6 +22,6 @@
         </div>
     </div>
 
-    <script src="../script/door-effects.js"></script>
+    <script src="../script/floating_stars.js"></script>
 </body>
 </html>
