--- a/index.html
+++ b/index.html
@@ -116,5 +116,6 @@
     </footer>
 
     <script src="script/script.js"></script>
+    <script src="script/floating_stars.js"></script>
 </body>
 </html>
