--- a/doors/2.html
+++ b/doors/2.html
@@ -123,6 +123,6 @@
         </div>
     </div>
 
-    <script src="../script/door-effects.js"></script>
+    <script src="../script/floating_stars.js"></script>
 </body>
 </html>
