fix titles for each door

--- a/doors/13.html
+++ b/doors/13.html
@@ -10,7 +10,7 @@
 <body>
     <div class="door-page">
         <div class="door-content">
-            <h1 class="door-title">🚪 Door 13 🚪</h1>
+            <h1 class="door-title">🚪 door 13 of the spell 🚪</h1>
             
             <div class="door-text">
                 <div class="placeholder-text">
@@ -18,7 +18,7 @@
                 </div>
             </div>
             
-            <a href="../index.html" class="back-button">← Back to Calendar</a>
+            <a href="../index.html" class="back-button">← back to the countdown</a>
         </div>
     </div>
 
