--- a/doors/4.html
+++ b/doors/4.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     <div class="door-page">
-        <div class="door-content">
-            <h1 class="door-title">🚪 Door 4 🚪</h1>
+        <h1 class="door-title">🚪 door 4 of the spell 🚪</h1>
             
             <div class="door-text">
                 <div class="placeholder-text italic">
@@ -22,6 +21,6 @@
         </div>
     </div>
 
-    <script src="../script/floating_stars.js"></script>
+    <script src="../scripts/floating_stars.js"></script>
 </body>
 </html>
