--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <p>an experiment by <a href="https://marina.vonsteinkirch.com" target="_blank">dr. marina von steinkirch</a></p>
     </footer>
 
-    <script src="script/script.js"></script>
-    <script src="script/floating_stars.js"></script>
+    <script src="scripts/effects.js"></script>
+    <script src="scripts/floating_stars.js"></script>
 </body>
 </html>
