--- a/404.html
+++ b/404.html
@@ -36,8 +36,8 @@
         <p>an experiment by <a href="https://marina.vonsteinkirch.com" target="_blank">dr. marina von steinkirch</a></p>
     </footer>
 
-    <script src="script/script.js"></script>
-    <script src="script/floating_stars.js"></script>
-    <script src="script/404-effects.js"></script>
+    <script src="scripts/effects.js"></script>
+    <script src="scripts/floating_stars.js"></script>
+    <script src="scripts/404-effects.js"></script>
 </body>
 </html>
