--- a/doors/12.html
+++ b/doors/12.html
@@ -10,7 +10,7 @@
 <body>
     <div class="door-page">
         <div class="door-content">
-            <h1 class="door-title">🚪 Door 12 🚪</h1>
+            <h1 class="door-title">🚪 door 12 of the spell 🚪</h1>
             
             <div class="door-text">
                 <div class="placeholder-text italic">
@@ -22,6 +22,6 @@
         </div>
     </div>
 
-    <script src="../script/floating_stars.js"></script>
+    <script src="../scripts/floating_stars.js"></script>
 </body>
 </html>
