--- a/doors/3.html
+++ b/doors/3.html
@@ -59,6 +59,6 @@
         </div>
     </div>
 
-    <script src="../script/floating_stars.js"></script>
+    <script src="../scripts/floating_stars.js"></script>
 </body>
 </html>
