--- a/doors/2.html
+++ b/doors/2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>door 2 of the spell</title>
-    <link rel="icon" type="image/svg+xml" href="../public/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="../assets/favicon.svg">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -40,7 +40,7 @@
 
                     </div>
                     <div class="moon-image">
-                        <img src="../public/new_moon.jpg" alt="New Moon" class="new-moon-img">
+                        <img src="../assets/new_moon.jpg" alt="New Moon" class="new-moon-img">
                     </div>
                 </div>
                 
