--- a/doors/3.html
+++ b/doors/3.html
@@ -29,28 +29,31 @@
                 </div>
                 
                 <div class="placeholder-text full-width-margin">
-                    <p>today's task has no candles
+                    <p>
+                        today we will spend time in our dreams, both awake and asleep
+
+                        part I: the walk<br>
                         <br>
-                        instead, we will go for a walk<br>
-                        during the walk, we will will imagine if we were  `bin(11)` we 
+                        let's go for a walk together
+                        <br>
+                        during the walk, i want you to convince yourself that there is nothing more important
+                        in your life thant the following four things, in this order:
+                        <br>
+                        1. your relationship with the divine, with something that is beyond and bigger than you, and you won't ever be able to fanthom completely<br>
+                        2. your relationship with <a href="https://www.youtube.com/watch?v=kr12yDWzToI" target="_blank">the person who most complements you during your existence</a>, 
+                        that one person who understand you, who cheers you, and who accepts the challenge of building something together with you under the divine's guidance.
+                        and if this person is not yet in your life, i want you to believe with every fiber of your being that after we finish this spell, this person will enter your life<br>
+                        3. your relationship with your creation: both your work and your children<br>
+                        <br>
                     </p>
 
-                    <p>light a candle and grab a piece of paper<br>
-                        write down 13 things you are grateful for in your life<br>
-                        do it with me <br>
-                        read your list out loud<br>
-                        feel the blessing of these 13 things being in your life<br>
-                        and finally — carefully — burn the paper in the candle's flame<br>
-                        let the candle burn<br>
-                        let it go
-                    </p>
-
-                    <p>three doors opened<br>
-                        three mysteries revealed
-                        <br>
-                        the countdown continues
-                        <br>
-                        tomrorow
+                    part II: the dream<br>
+                    <p>
+                        now we will try to lucid dream our reality<br>
+                        <a href="https://www.youtube.com/watch?v=C_EUg4uvULM" target="_blank">you are safe, you are sound, you are asleep</a><br>
+                        there are many ways to do this, but i want you to try the following<br>
+                        Before sleeping, repeat a phrase like:
+                        “Next time I’m dreaming, I will remember I’m dreaming.”
                     </p>
                 </div>
             </div>
