--- a/doors/3.html
+++ b/doors/3.html
@@ -100,9 +100,9 @@
                         
                         <br><br>
 
-                        for this experiment, i am harvesting the energy of<br>
+                        for this experiment, i am harvesting the energy from<br>
                         one of the coolest places you can be as an <i>oficial magi</i>:<br>
-                        new orleans, the city of vampires and ghosts (and jazz)<br>
+                        new orleans, the city of vampires, and ghosts, and jazz<br>
                         (get ready to explore with me in the following chapters)
 
                         <br><br>
