--- a/doors/3.html
+++ b/doors/3.html
@@ -87,7 +87,7 @@
                         
                         well, vampires wil be one of the themes of this journey<br>
                         (<a href="https://choices.vonsteinkirch.com/choices/choose-your-adventure/storytelling/the-usdchoice-of-hero/become-a-storyteller/gaf" target="_blank">i love them</a>, 
-                        i grew up believing i was buffy :))
+                        i grew up believing i was <a href="https://en.wikipedia.org/wiki/Buffy_the_Vampire_Slayer" target="_blank">buffy</a> :))
                         
                         <br><br>
 
