--- a/doors/3.html
+++ b/doors/3.html
@@ -32,7 +32,7 @@
                     <br>
                     
                     you reach this state only after completing all your shadow work<br>
-                    <a href="https://www.youtube.com/watch?v=rBrd_3VMC3c" target="_blank">(the completely forgiviness and acceptance of yourself)</a>
+                    <a href="https://www.youtube.com/watch?v=rBrd_3VMC3c" target="_blank">(the completely forgiveness and acceptance of yourself)</a>
                     
                     <br><br>
 
