--- a/doors/3.html
+++ b/doors/3.html
@@ -46,7 +46,7 @@
                     <a href="https://www.youtube.com/watch?v=9n-hyA2-FDg" target="_blank">there are many ways to enter this flow state</a><br>
                     one of them is through music and dance<br>
                     (songs are spells, so be mindful of anything you ingest)<br>
-                    both spoken and written words are the main tool for materization<br>
+                    both spoken and written words are the main tool for materialization<br>
                     (it took me a while to digest this part, but it's so fundamental <br>
                     and it's one of the most powerful meanings behind holy books like the bible)
 
