--- a/doors/3.html
+++ b/doors/3.html
@@ -70,7 +70,7 @@
                     
                     <br><br>
                     
-                    therefore, today's work is to meditate about the impact of the words, spoken or written<br>
+                    therefore, today's work is to meditate on the impact of the words, spoken or written<br>
                     tomorrow we will use this to create our reality
 
                     <br><br>
