--- a/doors/4.html
+++ b/doors/4.html
@@ -69,7 +69,7 @@
                         someone who feels like home, wherever you are<br>
                         someone who can read your mind && heart without a word<br>
                         someone with whom you can be your full, unguarded self<br>
-                        someone who chooses only you, always, forever<br>
+                        someone who chooses only you, eternally, forever<br>
                         someone with whom you become more than 2 — in G'd
 
                         <br><br>
