--- a/doors/5.html
+++ b/doors/5.html
@@ -15,7 +15,7 @@
             <div class="door-text">
                 <div class="placeholder-text">
 
-                    <a href="https://www.youtube.com/watch?v=1LcMEkRMri4" target="_blank">happy friday-in-love, anon</a>
+                    <a href="https://www.youtube.com/watch?v=1LcMEkRMri4" target="_blank">happy friday, anon</a>
                     
                     <br><br>
                     
