--- a/doors/5.html
+++ b/doors/5.html
@@ -50,7 +50,6 @@
                             <li>The Lost Boys (1987), by Joel Schumacher</li>
                             <li>Bram Stoker's Dracula (1992), by Francis Ford Coppola</li>
                             <li>Let the Right One In (2008), by Tomas Alfredson</li>
-                            <li>Horror of Dracula (1958), by Terence Fisher</li>
                             <li>30 Days of Night (2007), by David Slade</li>
                             <li>Dracula (1931), by Tod Browning</li>
                             <li>Nosferatu the Vampyre (1979), by Werner Herzog</li>
@@ -63,6 +62,7 @@
                             <li>Dark Shadows (2012), by Tim Burton</li>
                             <li>Vampires (1998), by John Carpenter</li>
                             <li>Stake Land (2010), by Jim Mickle</li>
+                            <li>Buffy, The Vampire Slayer S1 (1997), by Joss Whedon</li>
                         </ol>
 
                     </div>
