--- a/doors/5.html
+++ b/doors/5.html
@@ -52,7 +52,7 @@
                 <div class="text-with-image">
                     <div class="placeholder-text full-width-margin">
 
-                        meanwhile... indulge yourself with our '25 edition of<br>
+                        meanwhile... indulge yourself with our 2025 edition of<br>
                         the top 19 most-delightful-vampire-flicks-of-all-time:
 
                         <ol class="movie-list">
