--- a/doors/5.html
+++ b/doors/5.html
@@ -16,7 +16,7 @@
                 <div class="placeholder-text">
 
                     <span style="font-weight: bold; font-size: 1.8rem;">
-                        <a href="https://www.youtube.com/watch?v=1LcMEkRMri4" target="_blank">happy friday, anon</a>
+                        <a href="https://www.youtube.com/watch?v=1LcMEkRMri4" target="_blank">gm, my  anon</a>
                     </span>
                         
                     <br><br>
@@ -76,6 +76,10 @@
                             <li>Stake Land (2010), by Jim Mickle</li>
                             <li>Buffy, The Vampire Slayer S1 (1997), by Joss Whedon</li>
                         </ol>
+
+                        <br>
+
+                        wishing you a frightfully fun night 🧛🏼‍♀️🩸
 
                     </div>
                     <div class="moon-image">
