--- a/doors/5.html
+++ b/doors/5.html
@@ -15,7 +15,7 @@
             <div class="door-text">
                 <div class="placeholder-text">
 
-                    <span style="font-weight: bold; font-size: 1.8rem; color: #ff4444 !important;"">
+                    <span style="font-weight: bold; font-size: 1.8rem; color: #ff4444 !important;">
                         <a href="https://www.youtube.com/watch?v=1LcMEkRMri4" target="_blank">gm, my bloody anon</a>
                     </span>
                         
