--- a/doors/5.html
+++ b/doors/5.html
@@ -45,7 +45,7 @@
                         
                     <br>
 
-                    <a href="https://www.youtube.com/watch?v=SKZbfI71Ftk&list=LL" target="_blank">(and this inquiry is essential for tomorrow's work)</a>
+                    (and this inquiry is essential for tomorrow's work)
 
                     <br><br>
             
