--- a/doors/5.html
+++ b/doors/5.html
@@ -86,7 +86,7 @@
                         <br>
 
                         <span style="font-weight: bold; font-size: 1.4rem;">
-                            <a href="https://www.youtube.com/watch?v=wMSJFiUyckI" target="_blank" class="red-link">wishing you a frightfully zen day 🧛🏼‍♀️🩸</a>
+                            <a href="https://www.youtube.com/watch?v=9lPEEQvVEEU" target="_blank" class="red-link">wishing you a frightfully zen day 🧛🏼‍♀️🩸</a>
                         </span>
 
                         <br><br>
