--- a/doors/5.html
+++ b/doors/5.html
@@ -106,6 +106,6 @@
         </div>
     </div>
 
-    <script src="../scripts/floating_stars.js"></script>
+    <script src="../scripts/floating_90s.js"></script>
 </body>
 </html>
