--- a/doors/4.html
+++ b/doors/4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>door 4 of the spell</title>
+    <title>door 4 of the spell - soulmating</title>
     <link rel="icon" type="image/svg+xml" href="../assets/favicon.svg">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -109,8 +109,12 @@
 
             </div>
 
+            <br>
             
             <a href="../index.html" class="back-button">← back to the countdown</a>
+
+            <br>
+            
         </div>
     </div>
 
