--- a/doors/5.html
+++ b/doors/5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>door 5 of the spell</title>
+    <title>door 5 of the spell - vampires</title>
     <link rel="icon" type="image/svg+xml" href="../assets/favicon.svg">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -105,8 +105,13 @@
                     </div>
                 </div>
             </div>
+
+            <br>
             
             <a href="../index.html" class="back-button">← back to the countdown</a>
+
+            <br>
+            
         </div>
     </div>
 
