--- a/doors/6.html
+++ b/doors/6.html
@@ -186,7 +186,7 @@
                         how would you turn that into the greatest blessing you ever received?<br>
                         how would you turn that into your deepest conviction that G'd is real?<br>
                         how would you turn that into your source of divine infinite power?<br>
-                        (this will help you understand the true nature of magick)
+                        (this excercise will help you understand the true nature of magick)
                         </span>
                         
                         <br><br>
