--- a/doors/6.html
+++ b/doors/6.html
@@ -192,7 +192,7 @@
                         <br><br>
                         
                         <span style="font-weight: bold; font-size: 1.6rem; color: #18d269;">
-                            see you tomorrow after shabat <br>
+                            see you tomorrow after shabbat <br>
                             with<br>
                             less words and more action
                         </span>
