--- a/doors/6.html
+++ b/doors/6.html
@@ -193,8 +193,7 @@
                         
                         <span style="font-weight: bold; font-size: 1.6rem; color: #18d269;">
                             see you tomorrow after shabbat <br>
-                            with<br>
-                            less words and more action
+                            with less words and more action
                         </span>
 
                         <br><br>
