--- a/doors/6.html
+++ b/doors/6.html
@@ -63,9 +63,9 @@
                         <br><br>
                         
                         Job was prosperous — with a large family, many servants, and abundant wealth<br>
-                        however, his life changed dramatically when <span style="color: #8B0000;">Satan</span> challenged his faithfulness<br>
-                        <span style="color: #8B0000;">Satan</span> suggested that Job was faithful only because of his blessings<br>
-                        so G'd allowed <span style="color: #8B0000;">Satan</span> to test Job, causing him to lose his wealth, family, and health
+                        however, his life changed dramatically when <span style="color: #8B0000;">Satan (הַשָּׂטָן)</span> challenged his faithfulness<br>
+                        <span style="color: #8B0000;">Satan (הַשָּׂטָן)</span> suggested that Job was faithful only because of his blessings<br>
+                        so G'd allowed <span style="color: #8B0000;">Satan (הַשָּׂטָן)</span> to test Job, causing him to lose his wealth, family, and health
                         
                         <br><br>
 
