--- a/doors/5.html
+++ b/doors/5.html
@@ -81,12 +81,12 @@
                             <li>Daybreakers (2009), by Michael Spierig && Peter Spierig</li>
                             <li>Thirst (2009), by Park Chan-wook</li>
                             <li>Only Lovers Left Alive (2013), by Jim Jarmusch</li>
-                            <li>What We Do in the Shadows (2014), by Jemaine Clement && Taika Waititi</li>
+                            <li>What We Do in the Shadows (2014), by J. Clement && T. Waititi</li>
                             <li>Horror of Dracula (1958), by Terence Fisher</li>
                             <li>Dark Shadows (2012), by Tim Burton</li>
                             <li>Vampires (1998), by John Carpenter</li>
                             <li>Stake Land (2010), by Jim Mickle</li>
-                            <li>Buffy, The Vampire Slayer S1 (1997), by Joss Whedon</li>
+                            <li>Buffy, The Vampire Slayer S1 (1997), by J. Whedon</li>
                         </ol>
 
                         <br>
