--- a/doors/5.html
+++ b/doors/5.html
@@ -69,6 +69,7 @@
                             <li>Interview with the Vampire (1994), by Neil Jordan</li>
                             <li>Nosferatu (1922), by F.W. Murnau</li>
                             <li>From Dusk Till Dawn (1996), by Robert Rodriguez</li>
+                            <li>Sinners (2025), by Ryan Coogler</li>
                             <li>The Lost Boys (1987), by Joel Schumacher</li>
                             <li>Bram Stoker's Dracula (1992), by Francis Ford Coppola</li>
                             <li>Let the Right One In (2008), by Tomas Alfredson</li>
@@ -81,7 +82,6 @@
                             <li>Only Lovers Left Alive (2013), by Jim Jarmusch</li>
                             <li>What We Do in the Shadows (2014), by J. Clement && T. Waititi</li>
                             <li>Horror of Dracula (1958), by Terence Fisher</li>
-                            <li>Dark Shadows (2012), by Tim Burton</li>
                             <li>Vampires (1998), by John Carpenter</li>
                             <li>Stake Land (2010), by Jim Mickle</li>
                             <li>Buffy, The Vampire Slayer S1 (1997), by J. Whedon</li>
