--- a/doors/7.html
+++ b/doors/7.html
@@ -44,7 +44,7 @@
 
                 <div class="door-text">
                     hello, my dear anon,<br>
-                    i hope you had a great rest day<br>
+                    i hope you had a great day of rest<br>
                     (i had a great time chilling at home; enjoying the peace and quiet)
 
                     <br><br>
