--- a/doors/7.html
+++ b/doors/7.html
@@ -44,18 +44,18 @@
 
                 <div class="door-text">
                     hello, my dear anon,<br>
-                    i hope you had a great day of rest<br>
-                    (i had a great time chilling at home; enjoying the peace and quiet)
+                    i hope you had a great rest day<br>
+                    (i had a great time chillin' at home; enjoying the peace and quiet)
 
                     <br><br>
                     
-                    halloween and all saints' day is almost here<br>
+                    halloween and all saints' day are almost here<br>
                     (can you feel the veil thinning and the world getting brighter?)
 
                     <br><br>
                     
                     today, let's meditate on the ephemerality of life<br>
-                    (but not really, because dwelling on it too deeply, would contradict<br>
+                    (but not really, because dwelling on it too deeply would contradict<br>
                     the simple truth that you should be enjoying the moment instead)
 
                     <br><br>
