--- a/doors/7.html
+++ b/doors/7.html
@@ -70,7 +70,7 @@
 
                 <div class="text-frame">
                     <div class="trivia-container">
-                        <h3 class="trivia-title">the chilling american halloween quiz</h3>
+                        <h3 class="trivia-title">the chillin' american halloween quiz</h3>
                         
                         <br>
                         
