--- a/doors/8.html
+++ b/doors/8.html
@@ -388,6 +388,6 @@
         });
     </script>
 
-    <script src="../scripts/floating_stars.js"></script>
+    <script src="../scripts/matrix-effect.js"></script>
 </body>
 </html>
